<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drama</string>
    <string name="button1">Drama</string>
    <string name="button2">Rada</string>
    <string name="button3">Star Wars Theme</string>
    <string name="button4">Star Wars Imperial March</string>
    <string name="button5">Stop</string>
    <string name="action_exit">Exit</string>
    <string name="button6">Game Over</string>

</resources>