<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/riply"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity" >

    <Button
            android:id="@+id/drama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rada"
            android:text="@string/button1" />

    <Button
            android:id="@+id/rada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/theme"
            android:layout_alignBottom="@+id/theme"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/imp_march"
            android:text="@string/button2" />

    <Button
            android:id="@+id/theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="16dp"
            android:text="@string/button3" />

    <Button
            android:id="@+id/imp_march"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/drama"
            android:layout_alignBottom="@+id/drama"
            android:layout_alignLeft="@+id/theme"
            android:text="@string/button4" />

    <Button
            android:id="@+id/gameover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/stop"
            android:layout_alignBottom="@+id/stop"
            android:layout_centerVertical="true"
            android:text="@string/button6" />

    <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/theme"
            android:layout_alignRight="@+id/theme"
            android:layout_centerVertical="true"
            android:text="@string/button5" />

</RelativeLayout>